--- a/a.ipynb
+++ b/a.ipynb
@@ -66,65 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import camelot\n",
-    "import pandas as pd\n",
-    "# Ler o PDF\n",
-    "users = []\n",
-    "tabelas = camelot.read_pdf(\"relatorio.pdf\", pages=\"1\", flavor=\"stream\")\n",
-    "\n",
-    "if tabelas.n > 0:\n",
-    "    df = tabelas[0].df\n",
-    "\n",
-    "    df.columns = df.iloc[8]  \n",
-    "    df.drop(range(9), inplace=True)  \n",
-    "\n",
-    "    # Dividir a coluna em novas colunas\n",
-    "    display(df)\n",
-    "\n",
-    "    df_strip = df[\"Início\\nTérmino\\nGuia TISS\\nGuia\\nNr.Conta\\nAtendimento\"].str.split(\"\\n\", expand=True)\n",
-    "    a = [\"INICIO\",\"TERMINO\",\"GUIA TISS\",\"Guia\",\"Nr.Conta\",\"ATENDIMENTO\"]\n",
-    "    for x in range(len(a)):\n",
-    "          tabela2[novas_colunas[x]] = split_result[x]\n",
-    "\n",
-    "    #Removendo as linhas que n precisam na Fusex\n",
-    "    tabela2[[\"INICIO\",\"TERMINO\"]] = tabela2[\"Início\"].str.split(\" \", expand=True)\n",
-    "    tabela2.drop(\"Início\", axis=1, inplace=True)\n",
-    "    tabela2.drop(\"Término\", axis=1, inplace=True)\n",
-    "    tabela2.drop(columns=[tabela2.columns[0]], inplace=True)\n",
-    "    tabela2.drop(columns=[\"Nova Coluna\"], inplace=True)\n",
-    "\n",
-    "    tabela2[\"Nome\"] = df.iloc[:,1]\n",
-    "    tabela2[\"Origem\"] = df.iloc[:,3]\n",
-    "\n",
-    "    display(tabela2)\n",
-    "    # Iterando sobre a tabela2 nas colunas: Nome e Guia Tiss\n",
-    "    for indice,row in tabela2.iterrows():\n",
-    "         nome = row[\"Nome\"]\n",
-    "         guia = row[\"Guia TISS\"]\n",
-    "\n",
-    "        \n",
-    "         encontrado = False\n",
-    "         for item in users:\n",
-    "              if item[\"nome\"] == nome and item[\"guia\"] == guia:\n",
-    "                   item[\"qtd\"] += 1\n",
-    "                   encontrado = True\n",
-    "                   break\n",
-    "              \n",
-    "         if not encontrado:\n",
-    "              users.append({\"nome\": nome, \"guia\": guia, \"qtd\": 1})\n",
-    "print(users)\n",
-    "   \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import camelot,pandas as pd\n",
-    "# Ler o PDF \n",
-    "# AAAAAAAAQUIIIIIIIIIIIIIIIIIIIIII KKKKKKKKKKKKKKKKK\n",
+    "\n",
     "#APENAS UMA PESSOA\n",
     "users =  []\n",
     "tabelas = camelot.read_pdf(\"relatorio.pdf\", pages=\"1\", flavor=\"stream\")\n",
@@ -153,12 +96,9 @@
     "    tabela2[\"Nome\"] = df.iloc[:,1]\n",
     "    tabela2[\"Origem\"] = df.iloc[:,3]\n",
     "    tabela2[\"Valor\"] = df.iloc[:,4]\n",
-    "\n",
-    "    # Retirando as colunas que n vão na FUSEX\n",
+    "    \n",
     "    tabela2.drop(\"Início\", axis=1, inplace=True)\n",
     "    tabela2.drop(\"Término\", axis=1, inplace=True)\n",
-    "\n",
-    "#     tabela2.drop(columns=[tabela2.columns[1]], inplace=True)\n",
     "    \n",
     "    display(tabela2)\n",
     "\n",
@@ -181,11 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#                   JUNTANDO OS DOISSSSSSSSSSSSSSSSSSSS #################\n",
+    "#                   JUNTANDO OS DOIS #\n",
     "import camelot\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -255,9 +195,6 @@
     "                numero = float(valorr.replace(\",\", \".\"))\n",
     "            encontrado = False\n",
     "            for item in users:\n",
-    "                #Verificar se guia e nome vem com none ou '' se vier manda escrever direto, pq se não\n",
-    "                #Ele vai escrever e depois somar. Isso acontece nas 3 ultimas linhas\n",
-    "                #Tirar a ultima linha, vem com o nome \"MEMORIAL DIAGNOSTICO\"  e o valor total.\n",
     "                if item[\"NOME DO PACIENTE\"] == nome and item[\"N GUIA\"] == guia:\n",
     "                    \n",
     "                    item[\"QTD\"] += 1\n",
@@ -281,17 +218,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#                  EXCEL TUDO CERTOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO\n",
-    "\n",
+    "#                  EXCEL TUDO CERTO\n",
     "import camelot\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from xlsxwriter import Workbook\n",
     "\n",
     "#Relatorio MV com mais de 1 pessoa\n",
-    "# AAAAAAAAQUIIIIIIIIIIIIIIIIIIIIII KKKKKKKKKKKKKKKKK\n",
     "#COM MAIS DE UMA PESSOA\n",
-    "# Ler o PDF\n",
     "users = []\n",
     "tabelas = camelot.read_pdf(\"relatorio3.pdf\", pages=\"1\", flavor=\"stream\")\n",
     "tabela_excel = pd.DataFrame({ })\n",
@@ -305,7 +239,6 @@
     "    display(df)\n",
     "    try:\n",
     "        tabela_excel[\"Nome\"] = df[\"Atendimento\"].str[7:]\n",
-    "        # Verifica se o indice 2 esta vazio, se tiver, as Guias estão no indice 1, se não, no indice 2.\n",
     "        tabela_excel[\"Guia\"] = np.where(\n",
     "            (df.iloc[:,2].isna()) | (df.iloc[:, 2] == \"\"),\n",
     "            df.iloc[:, 1],\n",
